# 3dtiles-dl

./: .gitignore  README.md  main.py  output.fbx  output.mtl  output_ascii.fbx  output_standard.fbx  output_standard_new.fbx  pyproject.toml  test_export.dae
.claude/: settings.local.json
scripts/: convert_fbx_standard.py  convert_to_dae.py  convert_to_fbx.py  convert_to_obj.py  download_tiles.py  gui_server.py  map_picker.html  map_picker.py
src/: tile.py
tests/: conftest.py  test_mesh_outputs.py
